fix: kv__description__text alignment

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -44,7 +44,6 @@ $px-XXXL: 64px;
 $color-main: #eeeae5;
 $color-bg: #13294b;
 $color-accent: #005bab;
-$color-accent-2: #ea1c2d;
 
 $media-breakpoint-sm: 576px;
 $media-breakpoint-md: 768px;
@@ -155,6 +154,7 @@ $media-breakpoint-xl: 1200px;
     &__description {
       &__text {
         font-size: 20px;
+        text-align: center;
       }
     }
     @container es-rc-content (min-width: 440px) {
@@ -212,6 +212,7 @@ $media-breakpoint-xl: 1200px;
         width: 100%;
         &__text {
           max-width: 315px;
+          text-align: left;
         }
         &__icon__img {
           width: 100px;
